# minicerebro

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  railpack.toml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260721_0001_initial_persistence.py  20260721_0002_feedback_proposals.py  20260721_0003_generated_texts.py  20260721_0004_knowledge_pipeline.py  20260722_0005_source_contract_catalog.py  20260722_0006_source_editions.py  20260722_0007_node_contract.py  20260722_0008_evidence_contract.py  20260722_0009_claim_contract.py  20260723_0010_relation_contract.py  20260723_0011_versioning_contract.py  20260723_0012_expand_object_revision_version.py  20260723_0013_complete_versioning_contract.py  20260723_0014_ingestion_contract.py  20260723_0015_edition_registration.py  20260723_0016_index_entries.py  20260723_0017_segments.py  20260723_0018_extraction_runs.py  20260723_0019_knowledge_proposals.py  20260723_0020_knowledge_version_snapshots.py  20260723_0021_profile_knowledge_cards.py
backend/app/: __init__.py  main.py
backend/app/acceptance/: service.py
backend/app/api/: deps.py  routes.py
backend/app/cerebro_audit/: service.py
backend/app/closure/: service.py
backend/app/comparison/: service.py
backend/app/core/: models.py  repository.py  seeds.py  store.py  text.py
backend/app/db/: __init__.py  bootstrap.py  models.py  session.py
backend/app/roadmap/: service.py
backend/tests/: conftest.py  test_api.py  test_comparison.py  test_scoring.py
(+34 files in other folders)
