[project]
name = "minicerebro-backend"
version = "1.0.0"
description = "Backend de Minicerebro V1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.16.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.0",
  "openai>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
target-version = "py312"
